stylesheet: Fix GtkActionBar spacing
Fixes https://gitlab.gnome.org/GNOME/libadwaita/-/issues/163

--- a/src/stylesheet/widgets/_toolbars.scss
+++ b/src/stylesheet/widgets/_toolbars.scss
@@ -53,8 +53,11 @@ searchbar > revealer > box {
 
 actionbar > revealer > box {
   padding: 6px;
-  border-spacing: 6px;
   border-top: 1px solid $borders_color;
+
+  &, > box.start, > box.end {
+    border-spacing: 6px;
+  }
 }
 
 /**************
